2004/02/23 14:38 (-0500) muppetman

	* ParseXSDoc.pm: add hidden pods to the list of things to ignore when
	checking if a package is empty; this keeps from clobbering the pod in
	Glib.pm with Glib.pod, among other things.

2004/02/23 01:37 (-0500) muppetman

	* GClosure.xs: don't clobber $_

	* GenPod.pm: if an xsub is marked as a function, generate a
	function's signature for it.

	* GUtils.xs: mark the functions as functions.

	* GSignal.xs: =arg -> =for arg

	* GError.xs, gperl.h: add the ability to register new error domains
	and throw Glib::Errors from Perl.  New utility function,
	Glib::Error::matches, makes it easy to test errors.  New xs utility
	function for parsing a perl data structure into a GError.

	* t/d.t: bunches of new tests for the new Glib::Error features.

2004/02/22 21:44 (-0500) rwmcfa1

	* GSignal.xs: =arg -> =for arg, apidoc error/type-o fixed.

	* GUtils.xs, t/1.t: implemented CHECK_VERSION and friends with the same
	scheme that went into Gtk2 eariler today.

	* ParseXSDoc.pm: changed hide_hidden -> preprocess_pod. it now looks for
	the __function__ keyword. changed the way these keywords are recorded,
	they now go into xsub keys.
	
	* GenPod.pm: use the above by looking for the function key in xsubs
	and proceeding accordingly.

2004/02/22 15:26 (-0500) rwmcfa1

	* GenPod.pm: removed warning about xsubs with no args, as they're 
	perfectly legal, and there are now some.

2004/02/22 12:48 (-0500) rwmcfa1

	* GenPod.pm: method sorting implmented with suggestions from Marc and
	Peter.

2004/02/20 01:18 (-0500) muppetman

	* Glib.pm, README, NEWS: unstable release 1.036

2004/02/19 12:50 (+0100) kaffeetisch

	* Glib.xs (gperl_alloc_temp): Return NULL and complain loudly if
	the number of bytes is not greater than 0.

2004/02/19 01:18 (-0500) muppetman

	* Glib.pm, GError.xs, TODO: documentation updates.

2004/02/18 01:35 (-0500) muppetman

	A GError.xs
	A gperl-gtypes.h
	A gperl-gtypes.c
	A t/d.t
	M MANIFEST
	M Makefile.PL
	M Glib.exports