@@ -1,3 +1,8 @@
+2004/02/23 15:16 (-0500) rwmcfa1
+
+	* t/1.t: versions could be 0, which would fail before, check for
+	defined.
+
 2004/02/23 14:38 (-0500) muppetman
 
 	* ParseXSDoc.pm: add hidden pods to the list of things to ignore when
